# axiom-core

./: .gitignore  .npmignore  .npmrc  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  STATUS.md  measurements.json  package-lock.json  package.json  tsconfig.json  xxxxx.md
artifacts/: README.md  demo-output.json  example-evidence.json  example-verdict-failure.json  example-verdict.json
demo/: demo.js
docs/: ENCLAVE_INTERFACE.md  INTEGRATION.md  architecture.md  index.md  roadmap.md  security.md
enclave/: README.md
enclave-runner/: Cargo.toml  DEVELOPMENT.md  README.md  rust-toolchain.toml
enclave-runner/src/: enclave.rs  lib.rs  transform.rs  types.rs
enclave/runner/: .cargo-deps  Cargo.toml  DEVELOPMENT.md  README.md  build.rs
enclave/runner/src/: attestation.rs  error.rs  lib.rs  transform.rs
src/: index.ts
src/attestation/: parser.ts  types.ts  verifier.ts
src/core/: axiom.ts  canonical.ts  config.ts  errors.ts
src/entities/: entity.ts  relations.ts  roles.ts
src/runtime/: boundary.ts  enclave-bridge.ts  executor.ts  memory.ts  session.ts
src/security/: guarantees.ts
src/transform/: abstraction.ts  distiller.ts  masking.ts
tests/: attestation.test.ts  attested.integration.test.ts  boundary.test.ts  canonical.test.ts
