[package]
name = "axiom-enclave-runner"
version = "0.1.0"
edition = "2021"
authors = ["Axiom Core Team"]
description = "Native enclave runner for Axiom Core with AMD SEV-SNP support"
license = "Apache-2.0"
repository = "https://github.com/Axiom-Infra/axiom-core"

[lib]
crate-type = ["cdylib"]
name = "axiom_enclave_runner"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
rand = "0.8"

# Node.js N-API bindings
napi = { version = "2.16", features = ["napi8", "tokio_rt"] }
napi-derive = "2.16"

# Async runtime (for N-API)
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging (safe logging only, no raw data)
log = "0.4"

# AMD SEV-SNP (placeholder - actual crate depends on AMD SDK availability)
# sev-snp-sdk = { version = "0.1", optional = true }

[build-dependencies]
napi-build = "2.1"

[features]
default = ["simulator"]
simulator = []
sev-snp = []  # Real SEV-SNP support (requires AMD SDK)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false  # Keep symbols for measurement
panic = "abort"

[profile.release.build-override]
opt-level = 0

# Reproducible build settings
[profile.reproducible]
inherits = "release"
incremental = false

